--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -10,7 +10,7 @@
         <p>Có sự cố không mong muốn xảy ra.</p>
     </div>
     <div th:unless="${#strings.isEmpty(errorMessage)}">
-        <p th:text="${errorMessage}">Có sự cố không mong muốn xảy ra.</p>
+        <p th:text="${errorMessage}">Có sự cố không mong muốn xảy ra. code sai rồi check đi cha</p>
     </div>
 </body>
 </html>
